added icon, updated website content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.5" />
+     <link rel="icon" type="image/x-icon" href="icon.jpg">
     <title>Arit Chanda</title>
     <link
       rel="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;700;900&display=swap"
@@ -42,7 +43,7 @@
     <div class="container">
       <section id="about" class="section">
         <p>
-          I am a backend engineer with 4+ years of experience building and
+          I am a backend engineer with 3+ years of experience building and
           deploying reliable systems using Java, Spring Boot, Node.js, and AWS.
           I focus on creating scalable solutions while optimizing performance
           and efficiency.
@@ -62,64 +63,72 @@
         <h2>Experience</h2>
         <div class="sub-section">
           <h3>Software Development Engineer II</h3>
-          <span>NineLeaps | Aug 2024 - Present</span>
+          <span>NineLeaps | Bengaluru, India | August 2024 - Present</span>
           <p>
-            Architected and deployed a high-performance video upload and
-            streaming service utilizing AWS MediaConvert, Lambda, S3, and
-            DynamoDB.
+            •	Architected and deployed a high-performance video upload and streaming service utilizing AWS MediaConvert, Lambda, S3, and DynamoDB.
           </p>
           <p>
-            Enabled adaptive bitrate streaming for enhanced playback quality
-            across devices.
+            •	Enabled adaptive bitrate streaming for enhanced playback quality across devices, optimized storage management, and ensured seamless video delivery with a robust and scalable serverless architecture.
           </p>
           <p>
-            Designed microservices architecture and implemented secure APIs for
-            scalable video processing workflows.
+            •	Designed microservices architecture and implemented secure APIs for scalable video processing workflows.
           </p>
         </div>
         <div class="sub-section">
           <h3>Software Developer Intern</h3>
-          <span>SynergisticIT | July 2023 - Jan 2024</span>
+          <span>SynergisticIT | California, US | July 2023 - Jan 2024</span>
           <p>
-            Designed and implemented a scalable email service with AWS SES,
-            Java, Spring Boot, and DynamoDB, capable of sending ~15,000 emails
-            at peak.
+           •	Designed and implemented a scalable email service with AWS SES, Java, Spring Boot, and DynamoDB.
           </p>
           <p>
-            Developed and deployed 52 REST APIs, enhancing backend performance
-            and functionality.
+            •	Developed and deployed 52 REST APIs for an Automobile Insurance Portal and eCommerce Portal, enhancing backend performance and user functionality.
           </p>
           <p>
-            Increased deployment efficiency by 23% through a CI/CD pipeline
-            using GitHub Actions, Docker, AKS, ACR, and ArgoCD.
+            •	Increased deployment efficiency by implementation of a CI/CD pipeline using GitHub Actions, Docker, AKS, ACR, and ArgoCD.
+          </p>
+          <p>
+            •	Built a "Save Cart" feature using ReactJS, Redux, and NodeJS, integrating MongoDB for efficient state management.
+          </p>
+          <p>
+            •	Achieved 90% test coverage using JUnit, ensuring high code reliability and maintainability.
           </p>
         </div>
         <div class="sub-section">
           <h3>Software Engineering Intern</h3>
-          <span>Norton LifeLock Inc. | June 2022 - Aug 2022</span>
+          <span>Norton LifeLock Inc. | Arizona, US | June 2022 - August 2022</span>
           <p>
-            Automated VM deployments with pre-installed software, improving QA
-            team productivity by 40%.
+            •	Automated the deployment of VMs with pre-installed software using Vagrant, Boxstarter, and Chocolatey, improving QA team productivity.
           </p>
           <p>
-            Enhanced reporting systems and improved order filtration logic,
-            safeguarding transactions and reducing manual efforts.
+            •	Enhanced reporting systems by fixing a bug in eCommerce order tracking, reducing manual efforts for the Partners Team.
+          </p>
+          <p>
+            •	Improved the efficiency of a cancellation job filtration logic, preventing unnecessary orders and safeguarding 70+ transactions.
           </p>
         </div>
         <div class="sub-section">
           <h3>Associate IT Consultant</h3>
-          <span>ITC Infotech | Sept 2019 - July 2021</span>
+          <span>ITC Infotech | Bengaluru, India | October 2019 - July 2021</span>
           <p>
-            Led a team of 3 developers to design and implement the Four-Eyes
+            •	Led a team of 3 developers to design and implement the Four-Eyes
             approval system, reducing fraudulent admin activity by 73%.
           </p>
           <p>
-            Designed a dynamic UI for approval rule configuration and developed
-            30+ REST APIs for the Support Module.
+          •	Designed a dynamic UI for approval rule configuration using ReactJS, enabling customizable workflows for administrators.
+          </p>
+          <p>•	Developed 30+ REST APIs for the Support Module, incorporating AWS S3 for media storage and RDS MySQL for backend processes.</p>
+          <p>
+            •	Conducted technical mentoring sessions, fostering expertise in microservices and cloud-based architectures.
+          </p>
+        </div>
+        <div class="sub-section">
+          <h3>Software Development Intern</h3>
+          <span>Amazon | Bengaluru, India | February 2019 - September 2021</span>
+          <p>
+            •	Reduced ML model development time by 20% with a ReactJS and NodeJS-based web app utilizing AWS SQS and Step Functions.
           </p>
           <p>
-            Conducted technical mentoring sessions, fostering expertise in
-            microservices and cloud-based architectures.
+            •	Improved text classification accuracy to 95% using advanced TF-IDF encoding and machine learning models (XGBoost, CatBoost).
           </p>
         </div>
       </section>
@@ -201,6 +210,18 @@
               <a href="https://github.com/aritC/MSGR" target="_blank">Github</a>
             </p>
           </div>
+        </div>
+      </section>
+
+      <section id="education" class="section">
+        <h2>Education</h2>
+        <div class="sub-section">
+          <h3>Master of Science in Computer Science</h3>
+          <span> <a href="https://www.asu.edu/" target="_blank">Arizona State University</a> | Arizona, US | August 2021 - May 2023</span>
+        </div>
+        <div class="sub-section">
+          <h3>Bachelors of Technology in Computer Science</h3>
+          <span><a href="https://kiit.ac.in/" target="_blank">KIIT Deemed University</a> | Odisha, India | July 2015 - May 2019</span>
         </div>
       </section>
 
