--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
       rel="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;800;700;900&display=swap"
     />
     <link rel="stylesheet" href="index.css" />
+    <script src="index.js" defer></script>
   </head>
   <body>
     <header>
-      <h1><strong>AC</strong> | Arit Chanda</h1>
+      <h1><strong>AC</strong></h1>
       <nav>
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
@@ -43,6 +44,7 @@
     <div class="container">
       <section id="about" class="section">
         <p>
+          <span id="dynamic-greeting"></span><br/>
           I am a backend engineer with 3+ years of experience building and
           deploying reliable systems using Java, Spring Boot, Node.js, and AWS.
           I focus on creating scalable solutions while optimizing performance
@@ -63,7 +65,7 @@
         <h2>Experience</h2>
         <div class="sub-section">
           <h3>Software Development Engineer II</h3>
-          <span>NineLeaps | Bengaluru, India | August 2024 - Present</span>
+          <span>Nineleaps | Bengaluru, India | August 2024 - Present</span>
           <p>
             •	Architected and deployed a high-performance video upload and streaming service utilizing AWS MediaConvert, Lambda, S3, and DynamoDB.
           </p>
