changes to project card

--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
-            stroke-width="2"
+            stroke-width="3"
             stroke="currentColor"
             aria-hidden="true"
-            class="h-5 w-5 text-white sm:h-6 sm:w-6"
           >
             <path
               stroke-linecap="round"
@@ -139,44 +138,67 @@
         <h2>Projects</h2>
         <div class="skills-grid">
           <div class="skill-item">
-            <h3>Video Streaming App</h3>
-            <span>Dates</span>
-            <p>
-              A scalable video streaming platform with adaptive bitrate
-              streaming, built using AWS MediaConvert, Lambda, and DynamoDB.
-            </p>
-            <a href="https://github.com/aritC/video-streaming" target="_blank"
-              >Github</a
-            >
+            <a href="https://github.com/aritC/video-streaming" target="_blank">
+              <span class="skill-item-header">
+              <h3>Video Streaming App</h3>
+              <svg 
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 48 48"
+                width="2rem"
+                fill="currentColor">
+                  <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                  </path>
+              </svg>
+              </span>
+              <p>
+                A scalable video streaming platform with adaptive bitrate
+                streaming, built using AWS MediaConvert, Lambda, and DynamoDB.
+              </p>
+            </a>
           </div>
           <div class="skill-item">
-            <h3>DiscussHub</h3>
-            <span>Dates</span>
-            <p>
-              This project is a backend implementation for a social discussions
-              platform, allowing users to create accounts, post discussions,
-              interact with other users' content, and more.
-            </p>
             <a href="https://github.com/aritC/DiscussHub" target="_blank"
-              >Github</a
-            >
+              >
+              <span class="skill-item-header">
+                <h3>DiscussHub</h3>
+                <svg 
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 48 48"
+                  width="2rem"
+                  fill="currentColor">
+                    <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                    </path>
+                </svg>
+              </span>
+              <p>
+                This project is a backend implementation for a social discussions
+                platform, allowing users to create accounts, post discussions,
+                interact with other users' content, and more.
+              </p>
+            </a>
           </div>
           <div class="skill-item">
-            <h3>Encryptor</h3>
-            <span>Dates</span>
-            <p>
-              A scalable video streaming platform with adaptive bitrate
-              streaming, built using AWS MediaConvert, Lambda, and DynamoDB.
-            </p>
-            <p>
-              <a href="https://github.com/aritC/encryptor" target="_blank"
-                >Github</a
-              >
+            <a href="https://github.com/aritC/encryptor" target="_blank">
+              <span class="skill-item-header">
+                <h3>Encryptor</h3>
+                <svg 
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 48 48"
+                  width="2rem"
+                  fill="currentColor">
+                    <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                    </path>
+                </svg>
+              </span>
+              <p>
+                A scalable video streaming platform with adaptive bitrate
+                streaming, built using AWS MediaConvert, Lambda, and DynamoDB.
+              </p>
+            </a>
             </p>
           </div>
           <div class="skill-item">
             <h3>BertQA App</h3>
-            <span>Dates</span>
             <p>
               A simple app where clients can submit a paragraph and ask
               questions related to the paragraph and get the answers using BERT
@@ -190,7 +212,6 @@
           </div>
           <div class="skill-item">
             <h3>FlappyAI</h3>
-            <span>Dates</span>
             <p>
               Created a flappy bird clone and taught a reinforcement learning
               model to play and beat the game.
@@ -203,7 +224,6 @@
           </div>
           <div class="skill-item">
             <h3>MSGR</h3>
-            <span>Dates</span>
             <p>
               Created a messaging app to experiment and play around with
               Firebase and Google OAuth.
