renamed css items, udpated projects html

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
          </section>
          <section id="projects" class="section">
             <h2>Projects</h2>
-            <div class="skills-grid">
-               <div class="skill-item">
+            <div class="cards-grid">
+               <div class="card">
                   <a href="https://github.com/aritC/video-streaming" target="_blank">
-                     <span class="skill-item-header">
+                     <span class="card-header">
                         <h3>Video Streaming App</h3>
                         <svg 
                            xmlns="http://www.w3.org/2000/svg"
@@ -196,10 +196,10 @@
                      </p>
                   </a>
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <a href="https://github.com/aritC/DiscussHub" target="_blank"
                      >
-                     <span class="skill-item-header">
+                     <span class="card-header">
                         <h3>DiscussHub</h3>
                         <svg 
                            xmlns="http://www.w3.org/2000/svg"
@@ -217,9 +217,9 @@
                      </p>
                   </a>
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <a href="https://github.com/aritC/encryptor" target="_blank">
-                     <span class="skill-item-header">
+                     <span class="card-header">
                         <h3>Encryptor</h3>
                         <svg 
                            xmlns="http://www.w3.org/2000/svg"
@@ -237,40 +237,63 @@
                   </a>
                   </p>
                </div>
-               <div class="skill-item">
-                  <h3>BertQA App</h3>
-                  <p>
-                     A simple app where clients can submit a paragraph and ask
-                     questions related to the paragraph and get the answers using BERT
-                     NLP model.
-                  </p>
-                  <p>
-                     <a href="https://github.com/aritC/bertqawebsite" target="_blank"
-                        >Github</a
-                        >
-                  </p>
+               <div class="card">
+                  <a href="https://github.com/aritC/bertqawebsite" target="_blank">
+                     <span class="card-header">
+                        <h3>BertQA App</h3>
+                        <svg 
+                           xmlns="http://www.w3.org/2000/svg"
+                           viewBox="0 0 48 48"
+                           width="2rem"
+                           fill="currentColor">
+                           <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                           </path>
+                        </svg>
+                     </span>
+                     <p>
+                        A simple app where clients can submit a paragraph and ask
+                        questions related to the paragraph and get the answers using BERT
+                        NLP model.
+                     </p>
+                  </a>
                </div>
-               <div class="skill-item">
-                  <h3>FlappyAI</h3>
-                  <p>
-                     Created a flappy bird clone and taught a reinforcement learning
-                     model to play and beat the game.
-                  </p>
-                  <p>
-                     <a href="https://github.com/aritC/flappyai" target="_blank"
-                        >Github</a
-                        >
-                  </p>
+               <div class="card">
+                  <a href="https://github.com/aritC/flappyai" target="_blank">
+                     <span class="card-header">
+                        <h3>FlappyAI</h3>
+                        <svg 
+                           xmlns="http://www.w3.org/2000/svg"
+                           viewBox="0 0 48 48"
+                           width="2rem"
+                           fill="currentColor">
+                           <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                           </path>
+                        </svg>
+                     </span>
+                     <p>
+                        Created a flappy bird clone and taught a reinforcement learning
+                        model to play and beat the game.
+                     </p>
+                  </a>
                </div>
-               <div class="skill-item">
-                  <h3>MSGR</h3>
-                  <p>
-                     Created a messaging app to experiment and play around with
-                     Firebase and Google OAuth.
-                  </p>
-                  <p>
-                     <a href="https://github.com/aritC/MSGR" target="_blank">Github</a>
-                  </p>
+               <div class="card">
+                  <a href="https://github.com/aritC/MSGR" target="_blank">
+                     <span class="card-header">
+                        <h3>MSGR</h3>
+                        <svg 
+                           xmlns="http://www.w3.org/2000/svg"
+                           viewBox="0 0 48 48"
+                           width="2rem"
+                           fill="currentColor">
+                           <path d="M 41.470703 4.9863281 A 1.50015 1.50015 0 0 0 41.308594 5 L 27.5 5 A 1.50015 1.50015 0 1 0 27.5 8 L 37.878906 8 L 22.439453 23.439453 A 1.50015 1.50015 0 1 0 24.560547 25.560547 L 40 10.121094 L 40 20.5 A 1.50015 1.50015 0 1 0 43 20.5 L 43 6.6894531 A 1.50015 1.50015 0 0 0 41.470703 4.9863281 z M 12.5 8 C 8.3754991 8 5 11.375499 5 15.5 L 5 35.5 C 5 39.624501 8.3754991 43 12.5 43 L 32.5 43 C 36.624501 43 40 39.624501 40 35.5 L 40 25.5 A 1.50015 1.50015 0 1 0 37 25.5 L 37 35.5 C 37 38.003499 35.003499 40 32.5 40 L 12.5 40 C 9.9965009 40 8 38.003499 8 35.5 L 8 15.5 C 8 12.996501 9.9965009 11 12.5 11 L 22.5 11 A 1.50015 1.50015 0 1 0 22.5 8 L 12.5 8 z">
+                           </path>
+                        </svg>
+                     </span>
+                     <p>
+                        Created a messaging app to experiment and play around with
+                        Firebase and Google OAuth.
+                     </p>
+                  </a>
                </div>
             </div>
          </section>
@@ -309,34 +332,34 @@
          </section>
          <section id="skills" class="section">
             <h2>Skills</h2>
-            <div class="skills-grid">
-               <div class="skill-item">
+            <div class="cards-grid">
+               <div class="card">
                   <strong>Programming Languages:</strong>
                   <span>Java, JavaScript</span>
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <strong>Frameworks:</strong>
                   <span
                      >NodeJS, ExpressJS, ReactJS, Redux, Spring Boot, Typescript,
                   ApolloGraphQL</span
                      >
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <strong>Cloud Services:</strong>
                   <span
                      >AWS S3, Lambda, DynamoDB, SES, SNS, SQS, EventBridge, EC2,
                   Route53, API Gateway, Cloudfront, Redshift, ECR</span
                      >
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <strong>Databases:</strong>
                   <span>MySQL, DynamoDB, MongoDB, ElasticSearch</span>
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <strong>DevOps Tools:</strong>
                   <span>Docker, Kubernetes, GitHub Actions, ArgoCD, Kustomize</span>
                </div>
-               <div class="skill-item">
+               <div class="card">
                   <strong>Other Tools:</strong>
                   <span
                      >Nginx, Postman, REST APIs, Microservices Architecture,
