added resume link and readme.md file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="#projects">Projects</a>
             <a href="#skills">Skills</a>
             <a
-               href="https://drive.google.com/your-resume-link"
+               href="https://drive.google.com/file/d/1JieOyC42dqzS2VyvMGOe4pVCQNOul7Lr/view?usp=sharing"
                class="cta-button"
                target="_blank"
                >
